[package]
name    = "x"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]

[dependencies]
cgmath                = "0.15.0"
image                 = "0.18.0"
time                  = "0.1.38"
vulkano               = "0.9.0"
vulkano-shader-derive = "0.9.0"
vulkano-win           = "0.9.0"
winit                 = "0.11.0"
