[package]
name    = "x"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]

[dependencies]
cgmath                = "0.15.0"
env_logger            = "0.5.9"
glsl-to-spirv         = "0.1.4"
image                 = "0.18.0"
log                   = "0.4.1"
notify                = "4.0.3"
time                  = "0.1.38"
vulkano               = "0.9.0"
vulkano-shader-derive = "0.9.0"
vulkano-win           = "0.9.0"
winit                 = "0.11.0"

[patch.crates-io]
vulkano-shaders = { path = "../vulkano/vulkano-shaders" }
